# sc-surelog

./: .flake8  .gitignore  .gitmodules  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  tests.yml  wheels.yml
sc_surelog/: __init__.py
surelog/: __init__.py
tests/: test_lib.py  test_wheel.py
