[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cython",
    "scikit-build>=0.12",
    "cmake",
    "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "wheel: wheel only tests."
]
testpaths = [
    "tests"
]
pythonpath = [
    "siliconcompiler/siliconcompiler/toolscripts"
]
